--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,27 @@
     <link rel="stylesheet" type="text/css" href="resume.css">
 </head>
 <body>
-    <div id="header">
-        <h1>Fedor Kobak</h1>
-        <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <div id="header" style="text-align:center"> 
+        <h1>Fedor Kobak</h1> 
+        <p>Email: <a href="mailto:kobfedsur@gmail.com">kobfedsur@gmail.com</a></p> 
+        <p> 
+            <a href="https://www.linkedin.com/in/fedor-kobak-30bba5258/">LinkedIn</a> | 
+            <a href="https://github.com/fedorkobak">Github</a> | 
+            <a href="https://www.kaggle.com/datascienceimcomming">Kaggle</a> 
+        </p> 
+    </div>
+    <hr> 
+    <h3>Skills</h3> 
+    <hr> 
+    <div> 
+        <ul> 
+            <li>Programming Languages:</li> 
+                <ul> 
+                    <li>Python (pandas, numpy, sklearn, torch, matplotlib, plotly, dash, fastapi);</li> 
+                    <li>SQL (PostgreSQL, complex queries, basic administration).</li> </ul> 
+                    <li>Tools: Linux, Git, Docker.</li> 
+                    <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings, Convolutional Neural Network (CNN).</li> 
+        </ul> 
     </div>
     <div id="work-experience">
         <h2>Work experience</h2>
