add work experience to resume

--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,25 @@
             <a href="https://www.kaggle.com/datascienceimcomming">Kaggle</a> 
         </p> 
     </div>
+    <hr>
+    <h3>Work Experience</h3>
+    <hr>
+    <div>
+        
+        <div style="display: flex; justify-content: space-between;">
+            <span style="text-align: left;"><b>Belinvest bank, Data Scientist</b>, full time</span>
+            <span style="text-align: right"><i>October 2021 - Present</i></span>
+        </div>
+        <div style="display: flex; justify-content: space-between;">
+            <span style="text-align: left;"><b>Melius soft, Data Scientist</b>, part time</span>
+            <span style="text-align: right"><i>November 2022 - Present</i></span>
+        </div>
+        <ul>
+            <li>Building and deploying credit scoring models;</li>
+            <li>Extract data from multiple sources - databases, S3, XML, JSON;</li>
+            <li>Demonstrated the value of using databases over excel uploads, highlighting benefits such as improved data integrity and streamlined processes;</li>
+            <li>Automated reports generation using the Dash framework.</li>
+        </ul>
     <hr> 
     <h3>Skills</h3> 
     <hr> 
@@ -23,40 +42,12 @@
             <li>Programming Languages:</li> 
                 <ul> 
                     <li>Python (pandas, numpy, sklearn, torch, matplotlib, plotly, dash, fastapi);</li> 
-                    <li>SQL (PostgreSQL, complex queries, basic administration).</li> </ul> 
+                    <li>SQL (PostgreSQL, complex queries, basic administration);</li>
+                    <li>Bash (basic file manipulations).</li>
+                </ul> 
                     <li>Tools: Linux, Git, Docker.</li> 
-                    <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings, Convolutional Neural Network (CNN).</li> 
+                    <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li> 
         </ul> 
-    </div>
-    <div id="work-experience">
-        <h2>Work experience</h2>
-        <table class="work-experience">
-            <tr>
-                <th>Company</th>
-                <th>Position</th>
-                <th>Dates</th>
-            </tr>
-            <tr>
-                <td>Belinvest bank</td>
-                <td>Mathematical modelling specialist</td>
-                <td>Since Oct 2021</td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    Developed machine learning models for the credit scoring task and provided technical guidance to the development team. Justified the need to use optimisation algorithms for model fitting.
-                </td>
-            </tr>
-            <tr>
-                <td>Melius Soft</td>
-                <td>Data Scientist</td>
-                <td>Since Jul 2023</td></td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    Developed machine learning models for credit scoring and helped development team implement model. Built, deployed and supported Dash application to monitor decision systems in general and model in particular.
-                </td>
-            </tr>
-        </table>
     </div>
     <div id="education">
         <h2>Education</h2>
