--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,6 @@
     <h3>Work Experience</h3>
     <hr>
     <div>
-        
         <div style="display: flex; justify-content: space-between;">
             <span style="text-align: left;"><b>Belinvest bank, Data Scientist</b>, full time</span>
             <span style="text-align: right"><i>October 2021 - Present</i></span>
@@ -49,12 +48,18 @@
                     <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li> 
         </ul> 
     </div>
-    <div id="education">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>Belarusan State Economic University</strong></li>
-            <li><strong>karpovcouces</strong></li>
-        </ul>
+    <hr> 
+    <h3>Education</h3>
+    <hr>
+    <div>
+        <div style="display: flex; justify-content: space-between;">
+            <span style="text-align: left;">Belarusian State Economic University <b>Economic cybernetics</b></span>
+            <span style="text-align: right"><i>September 2018 - June 2022</i></span>
+        </div>
+        <div style="display: flex; justify-content: space-between;">
+            <span style="text-align: left;">Karpov cources <b>Start ML</b></span>
+            <span style="text-align: right"><i>August 2023 - present</i></span>
+        </div>
     </div>
 </body>
 </html>
