resume   education more structurised

--- a/resume.html
+++ b/resume.html
@@ -16,9 +16,9 @@
         </p> 
     </div>
     <hr>
-    <h3>Work Experience</h3>
+    <h3 style="padding-left:5%">Work Experience</h3>
     <hr>
-    <div>
+    <div style="padding-left:5%">
         <div style="display: flex; justify-content: space-between;">
             <span style="text-align: left;"><b>Belinvest bank, Data Scientist</b>, full time</span>
             <span style="text-align: right"><i>October 2021 - Present</i></span>
@@ -33,10 +33,11 @@
             <li>Demonstrated the value of using databases over excel uploads, highlighting benefits such as improved data integrity and streamlined processes;</li>
             <li>Automated reports generation using the Dash framework.</li>
         </ul>
+    </div>
     <hr> 
-    <h3>Skills</h3> 
+    <h3 style="padding-left:5%">Skills</h3> 
     <hr> 
-    <div> 
+    <div style="padding-left:5%"> 
         <ul> 
             <li>Programming Languages:</li> 
                 <ul> 
@@ -45,20 +46,28 @@
                     <li>Bash (basic file manipulations).</li>
                 </ul> 
                     <li>Tools: Linux, Git, Docker.</li> 
-                    <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li> 
+                    <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li>
         </ul> 
     </div>
     <hr> 
-    <h3>Education</h3>
+    <h3 style="padding-left:5%">Education</h3>
     <hr>
-    <div>
-        <div style="display: flex; justify-content: space-between;">
-            <span style="text-align: left;">Belarusian State Economic University <b>Economic cybernetics</b></span>
-            <span style="text-align: right"><i>September 2018 - June 2022</i></span>
+    <div style="padding-left:5%">
+        <div style="padding-bottom:20px">
+            <div style="display: flex; justify-content: space-between;">
+                <span style="text-align: left;"><b>Belarusian State Economic University</b></span>
+                <span style="text-align: right"><i>September 2018 - June 2022</i></span>
+            </div>
+            <span style="text-align: left">Faculty of Digital Economy</span><br>
+            <span style="text-align: left">Economic Cybernetics</span><br>
+            <span style="text-align: left">Bachelor’s degree</span>
         </div>
-        <div style="display: flex; justify-content: space-between;">
-            <span style="text-align: left;">Karpov cources <b>Start ML</b></span>
-            <span style="text-align: right"><i>August 2023 - present</i></span>
+        <div style="padding-bottom:20px">
+            <div style="display: flex; justify-content: space-between;">
+                <span style="text-align: left;"><b>Karpov courses</b></span>
+                <span style="text-align: right"><i>August 2023 - Present</i></span>
+            </div>
+            <a href="https://karpov.courses/startml/programm#1" style="text-align: left">Start ML</a>
         </div>
     </div>
 </body>
