--- a/resume.html
+++ b/resume.html
@@ -20,18 +20,31 @@
     <hr>
     <div style="padding-left:5%">
         <div style="display: flex; justify-content: space-between;">
-            <span style="text-align: left;"><b>Belinvest bank, Data Scientist</b>, full time</span>
-            <span style="text-align: right"><i>October 2021 - Present</i></span>
-        </div>
-        <div style="display: flex; justify-content: space-between;">
-            <span style="text-align: left;"><b>Melius soft, Data Scientist</b>, part time</span>
-            <span style="text-align: right"><i>November 2022 - Present</i></span>
+            <span style="text-align: left;"><b>Maxbit solution, Machinelearning engineer</b>, full time</span>
+            <span style="text-align: right"><i>March 2024 - February 2025</i></span>
         </div>
         <ul>
-            <li>Building and deploying credit scoring models;</li>
-            <li>Extract data from multiple sources - databases, S3, XML, JSON;</li>
-            <li>Demonstrated the value of using databases over excel uploads, highlighting benefits such as improved data integrity and streamlined processes;</li>
+            <li>Built a neural network learning pipeline for game recommendations.</li>
+            <li>Created complex sql queries to clickhouse and postgreSQL.</li>
+            <li>Developed a FastAPI application that implements the model.</li>
+            <li>Set up CI/CD processes for automatic update model using GitLab and MLFlow.</li>
+        </ul>
+        <div style="display: flex; justify-content: space-between;">
+            <span style="text-align: left;"><b>Melius soft, Data Scientist</b>, part time</span>
+            <span style="text-align: right"><i>October 2023 - March 2024</i></span>
+        </div>
+        <ul>
+            <li>Building and deploying machine learning model for credit scoring.</li>
+            <li>Extract data from multiple sources - databases, S3, XML, JSON.</li>
             <li>Automated reports generation using the Dash framework.</li>
+        </ul>
+        <div style="display: flex; justify-content: space-between;">
+            <span style="text-align: left;"><b>Belinvest bank, Data Scientist</b>, full time</span>
+            <span style="text-align: right"><i>October 2021 - March 2024</i></span>
+        </div> 
+        <ul>
+            <li>Building and deploying credit scoring models.</li>
+            <li>Provided documentation and guidance to the development team how to use models in production.</li>
         </ul>
     </div>
     <hr> 
@@ -41,8 +54,8 @@
         <ul> 
             <li>Programming Languages:</li> 
                 <ul> 
-                    <li>Python (pandas, numpy, sklearn, torch, matplotlib, plotly, dash, fastapi);</li> 
-                    <li>SQL (PostgreSQL, complex queries, basic administration);</li>
+                    <li>Python (pandas, numpy, sklearn, torch, matplotlib, plotly, dash, FastAPI).</li> 
+                    <li>SQL (PostgreSQL, complex queries, basic administration).</li>
                     <li>Bash (basic file manipulations).</li>
                 </ul> 
                     <li>Tools: Linux, Git, Docker.</li> 
