--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div id="header" style="text-align:center"> 
-        <h1>Fedor Kobak</h1> 
+        <h1>Fedor Kobak</h1>
+        <h2>Machine Learning Engineer</h2>
+        <p>Location: Poland, Krakow</p>
         <p>Email: <a href="mailto:kobfedsur@gmail.com">kobfedsur@gmail.com</a></p> 
         <p> 
             <a href="https://www.linkedin.com/in/fedor-kobak-30bba5258/">LinkedIn</a> | 
@@ -20,7 +22,7 @@
     <hr>
     <div style="padding-left:5%">
         <div style="display: flex; justify-content: space-between;">
-            <span style="text-align: left;"><b>Maxbit solution, Machinelearning engineer</b>, full time</span>
+            <span style="text-align: left;"><b>Maxbit solution, Machine Learning Engineer</b>, full time</span>
             <span style="text-align: right"><i>March 2024 - February 2025</i></span>
         </div>
         <ul>
@@ -54,12 +56,13 @@
         <ul> 
             <li>Programming Languages:</li> 
                 <ul> 
-                    <li>Python (pandas, numpy, sklearn, torch, matplotlib, plotly, dash, FastAPI).</li> 
-                    <li>SQL (PostgreSQL, complex queries, basic administration).</li>
-                    <li>Bash (basic file manipulations).</li>
+                    <li>Python (pandas, numpy, sklearn, PyTorch, matplotlib, plotly, dash, FastAPI).</li> 
+                    <li>SQL (PostgreSQL, Clickhouse, complex queries, basic administration).</li>
+                    <li>Bash (file manipulations, ssh, basic administration).</li>
                 </ul> 
-                    <li>Tools: Linux, Git, Docker.</li> 
-                    <li>Machine Learning Algorithms: Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li>
+            <li>Tools: Linux, Git, Docker.</li> 
+            <li>Machine Learning Algorithms: Neural Networks, Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li>
+            <li>Languages: English B2, Polish A2, Belarussian Native.</li>
         </ul> 
     </div>
     <hr> 
@@ -72,15 +75,22 @@
                 <span style="text-align: right"><i>September 2018 - June 2022</i></span>
             </div>
             <span style="text-align: left">Faculty of Digital Economy</span><br>
-            <span style="text-align: left">Economic Cybernetics</span><br>
+            <span style="text-align: left">Economic Cybernetics (now renamed Applied Mathematics)</span><br>
             <span style="text-align: left">Bachelor’s degree</span>
         </div>
         <div style="padding-bottom:20px">
             <div style="display: flex; justify-content: space-between;">
                 <span style="text-align: left;"><b>Karpov courses</b></span>
-                <span style="text-align: right"><i>August 2023 - Present</i></span>
+                <span style="text-align: right"><i>August 2023 - January 2024</i></span>
             </div>
-            <a href="https://karpov.courses/startml/programm#1" style="text-align: left">Start ML</a>
+            <a href="https://lab.karpov.courses/certificate/32cb1d8c-a0e6-405c-a982-46cce7b55eea/en/" style="text-align: left">Start ML</a>
+        </div>
+        <div style="padding-bottom: 20px">
+            <div style="display: flex; justify-content: space-between;">
+                <span style="text-align: left;"><b>Karpov courses</b></span>
+                <span style="text-align: right"><i>September 2024 - January 2025</i></span>
+            </div>
+            <a href="https://lab.karpov.courses/certificate/43451779-3039-4cf7-bb39-688e9f82c04d/en/" style="text-align: left">Deep Learning Engineer</a>
         </div>
     </div>
 </body>
