correct names to be common

--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
         <ul> 
             <li>Programming Languages:</li> 
                 <ul> 
-                    <li>Python (pandas, numpy, sklearn, PyTorch, matplotlib, plotly, dash, FastAPI).</li> 
+                    <li>Python (Pandas, NumPy, sklearn, PyTorch, matplotlib, plotly, dash, FastAPI).</li> 
                     <li>SQL (PostgreSQL, Clickhouse, complex queries, basic administration).</li>
                     <li>Bash (file manipulations, ssh, basic administration).</li>
                 </ul> 
