add more tools info

--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
                     <li>SQL (PostgreSQL, Clickhouse, complex queries, basic administration).</li>
                     <li>Bash (file manipulations, ssh, basic administration).</li>
                 </ul> 
-            <li>Tools: Linux, Git, Docker.</li> 
+            <li>Tools: Linux, Git, GitLab, GitHub, Docker, MLFLow.</li> 
             <li>Machine Learning Algorithms: Neural Networks, Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li>
             <li>Languages: English B2, Polish A2, Belarussian Native.</li>
         </ul> 
