restructure skills in resume

--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
         </div> 
         <ul>
             <li>Building and deploying credit scoring models.</li>
-            <li>Provided documentation and guidance to the development team how to use models in production.</li>
+            <li>Provided documentation and guidance to the development team on how to use models in production.</li>
         </ul>
     </div>
     <hr> 
@@ -54,14 +54,16 @@
     <hr> 
     <div style="padding-left:5%"> 
         <ul> 
-            <li>Programming Languages:</li> 
-                <ul> 
-                    <li>Python (Pandas, NumPy, Scikit-learn, PyTorch, matplotlib, plotly, dash, FastAPI).</li> 
-                    <li>SQL (PostgreSQL, Clickhouse, complex queries, basic administration).</li>
-                    <li>Bash (file manipulations, ssh, basic administration).</li>
-                </ul> 
-            <li>Tools: Linux, Git, GitLab, GitHub, Docker, MLFLow.</li> 
+        <li>Python:</li>
+            <ul>
+                <li>Machine learning: PyTorch, Scikit-learn.</li>
+                <li>Data manipulations: Pandas, NumPy.</li>
+                <li>Visualization: matplotlib, plotly, dash.</li>
+                <li>Other: FastAPI, unittest.</li>
+            </ul>
+            <li>SQL: PostgreSQL, Clickhouse, complex queries, basic administration.</li>
             <li>Machine Learning Algorithms: Neural Networks, Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li>
+            <li>Tools: Linux, Git, GitLab, GitHub, Docker, MLFLow, Bash.</li> 
             <li>Languages: English B2, Polish A2, Belarussian Native.</li>
         </ul> 
     </div>
