--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
     <hr> 
     <div style="padding-left:5%"> 
         <ul> 
-        <li>Python:</li>
+            <li>Python:</li>
             <ul>
                 <li>Machine learning: PyTorch, Scikit-learn.</li>
                 <li>Data manipulations: Pandas, NumPy.</li>
@@ -62,7 +62,11 @@
                 <li>Other: FastAPI, unittest.</li>
             </ul>
             <li>SQL: PostgreSQL, Clickhouse, complex queries, basic administration.</li>
-            <li>Machine Learning Algorithms: Neural Networks, Logistic regression, Support Vector Machines (SVM), Decision Trees, Baggings, Boostings.</li>
+            <li>Machine Learning: 
+            <ul>
+                <li>Deep Learning: CNN, RNN.</li> 
+                <li>Classical algorithms: Linear models, Decision Trees, Baggings, Boostings.</li>
+            </ul>
             <li>Tools: Linux, Git, GitLab, GitHub, Docker, MLFLow, Bash.</li> 
             <li>Languages: English B2, Polish A2, Belarussian Native.</li>
         </ul> 
