--- a/resumes/ml_engineer.html
+++ b/resumes/ml_engineer.html
@@ -27,7 +27,7 @@
 </div>
 <ul>
     <li>Built a neural network learning pipeline for game recommendations.</li>
-    <li>Created complex sql queries to clickhouse and postgreSQL.</li>
+    <li>Created complex sql queries to Clickhouse and PostgreSQL.</li>
     <li>Developed a FastAPI application that implements the model.</li>
     <li>Set up CI/CD processes for automatic update model using GitLab and MLFlow.</li>
 </ul>
