minor resume fixes

--- a/resumes/ds.html
+++ b/resumes/ds.html
@@ -29,7 +29,7 @@
     <li>Built a neural network learning pipeline for game recommendations.</li>
     <li>Created complex sql queries to Clickhouse and PostgreSQL.</li>
     <li>Developed a FastAPI application that implements the model.</li>
-    <li>Set up CI/CD processes for automatic update model using GitLab and MLFlow.</li>
+    <li>Set up CI/CD processes for automated model updates using GitLab CI and MLFlow.</li>
 </ul>
 <div style="display: flex; justify-content: space-between;">
     <span style="text-align: left;"><b>Melius soft, Data Scientist</b>, part time</span>
@@ -37,7 +37,7 @@
 </div>
 <ul>
     <li>Building and deploying machine learning model for credit scoring.</li>
-    <li>Extract data from multiple sources - databases, S3, XML, JSON.</li>
+    <li>Extract data from multiple sources: PostgreSQL, S3, XML, JSON.</li>
     <li>Automated reports generation using the Dash framework.</li>
 </ul>
 <div style="display: flex; justify-content: space-between;">
