--- a/src/python_developer/experience.html
+++ b/src/python_developer/experience.html
@@ -3,19 +3,19 @@
     <span style="text-align: right"><i>March 2024 - February 2025</i></span>
 </div>
 <ul>
-    <li>Build a game recommendation service.</li>
-    <li>As a core features of the service developed ML model on PyTorch.</li>
+    <li>Build the recommendation system service.</li>
+    <li>As a core feature of the service developed ML model on PyTorch.</li>
     <li>Developed complex sql queries to Clickhouse and PostgreSQL.</li>
     <li>Developed a FastAPI application that implements the model and bisness logic around it.</li>
-    <li>Set up CI/CD processes for automatic update model using GitLab and MLFlow.</li>
+    <li>Set up CI/CD processes for automated model updates using GitLab CI and MLFlow.</li>
 </ul>
 <div style="display: flex; justify-content: space-between;">
-    <span style="text-align: left;"><b>Melius soft, Data Scientist</b>, part time</span>
+    <span style="text-align: left;"><b>Melius soft, Python developer</b>, part time</span>
     <span style="text-align: right"><i>October 2023 - March 2024</i></span>
 </div>
 <ul>
     <li>Building and deploying machine learning model for credit scoring.</li>
-    <li>Extract data from multiple sources - databases, S3, XML, JSON.</li>
+    <li>Extract data from multiple sources: PostgreSQL, S3, XML, JSON.</li>
     <li>Automated reports generation using the Dash framework.</li>
 </ul>
 <div style="display: flex; justify-content: space-between;">
