add seaborn to the set of skills

--- a/resumes/ds.html
+++ b/resumes/ds.html
@@ -58,7 +58,7 @@
     <ul>
         <li>Machine learning: PyTorch, Scikit-learn.</li>
         <li>Data manipulations: Pandas, NumPy.</li>
-        <li>Visualization: matplotlib, plotly, dash.</li>
+        <li>Visualization: matplotlib, seaborn, plotly, dash.</li>
         <li>Other: FastAPI, unittest.</li>
     </ul>
     <li>SQL: PostgreSQL, Clickhouse, complex queries, basic administration.</li>
