change location remove ready resumes

--- a/src/main.html
+++ b/src/main.html
@@ -9,7 +9,7 @@
     <div id="header" style="text-align:center"> 
         <h1>Fedor Kobak</h1>
         <h2>{{position}}</h2>
-        <p>Location: Poland, Krakow</p>
+        <p>Location: Belarus, Minsk</p>
         <p>Email: <a href="mailto:kobfedsur@gmail.com">kobfedsur@gmail.com</a></p> 
         <p> 
             <a href="https://www.linkedin.com/in/fedor-kobak-30bba5258/">LinkedIn</a> | 
