remove Polish from skils

--- a/src/ml_engineer/skills.html
+++ b/src/ml_engineer/skills.html
@@ -13,5 +13,5 @@
         <li>Classical algorithms: Linear models, Decision Trees, Baggings, Boostings.</li>
     </ul>
     <li>Tools: Linux, Git, GitLab, GitHub, Docker, MLFLow, Bash.</li> 
-    <li>Languages: English B2, Polish A2, Belarussian Native.</li>
+    <li>Languages: English B2, Russian native.</li>
 </ul> 
