--- a/src/python_developer/skills.html
+++ b/src/python_developer/skills.html
@@ -8,5 +8,5 @@
     </ul>
     <li>SQL: PostgreSQL, Clickhouse, complex queries, basic administration.</li>
     <li>Tools: Linux, Git, GitLab, GitHub, Docker, MLFLow, Bash.</li> 
-    <li>Languages: English B2, Polish A2, Belarussian Native.</li>
+    <li>Languages: English B2, Rusiian native.</li>
 </ul> 
